[tool.poetry]
name = "HC_LangGraph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
python-dotenv = "^1.0.1"
black = "^24.4.2"
isort = "^5.13.2"
langchain = "^0.2.2"
langchain-openai = "^0.1.8"
langgraph = "^0.0.64"
grandalf = "^0.8"
openai = "^1.31.1"
langchain-community = "^0.2.3"
graphviz = "^0.20.3"
tavily-python = "^0.3.3"
bs4 = "^0.0.2"
duckduckgo-search = "^6.1.5"
aiosqlite = "^0.20.0"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"


[tool.poetry.group.D.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
